--- a/picothru/Base.lproj/Main_iPhone.storyboard
+++ b/picothru/Base.lproj/Main_iPhone.storyboard
@@ -40,47 +40,26 @@
             </objects>
             <point key="canvasLocation" x="85" y="40"/>
         </scene>
-        <!--Con Table View Controller - 購入確認-->
-        <scene sceneID="PQN-G8-JaL">
+        <!--Con Table View Controller-->
+        <scene sceneID="0Og-SB-g32">
             <objects>
-                <tableViewController storyboardIdentifier="ctv" id="4gA-nz-RVa" customClass="ConTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" sectionIndexMinimumDisplayRowCount="5" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sxI-05-vSW">
+                <viewController storyboardIdentifier="ctv" id="qKG-fR-2Vx" customClass="ConTableViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZTH-ym-Umh"/>
+                        <viewControllerLayoutGuide type="bottom" id="rkW-sJ-ifK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tXp-yz-XFh">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableFooterView" contentMode="scaleToFill" id="aAS-I3-XfL">
-                            <rect key="frame" x="0.0" y="66" width="320" height="1"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        </view>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="nCU-jb-kBd">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nCU-jb-kBd" id="zyW-ia-bNr">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <sections/>
-                        <connections>
-                            <outlet property="dataSource" destination="4gA-nz-RVa" id="ljZ-PN-dbr"/>
-                            <outlet property="delegate" destination="4gA-nz-RVa" id="0Ip-7S-LQa"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="購入確認" id="au8-4Y-k8w"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YVD-6y-fFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationBar contentMode="scaleToFill" id="BUj-Z6-iVk">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <items>
-                        <navigationItem title="Title" id="L58-D0-oX3"/>
-                    </items>
-                </navigationBar>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="viewfortable" destination="tXp-yz-XFh" id="v8s-ri-PnW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YNX-v9-7VK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="554" y="31"/>
+            <point key="canvasLocation" x="349" y="67"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
