--- a/picothru/Base.lproj/Main_iPhone.storyboard
+++ b/picothru/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="186-eO-aZA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="186-eO-aZA">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -40,10 +40,10 @@
             </objects>
             <point key="canvasLocation" x="-185" y="67"/>
         </scene>
-        <!--Con View Controller-->
+        <!--Purchase View Controller-->
         <scene sceneID="0Og-SB-g32">
             <objects>
-                <viewController storyboardIdentifier="convc" id="qKG-fR-2Vx" customClass="ConViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="convc" id="qKG-fR-2Vx" customClass="PurchaseViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ZTH-ym-Umh"/>
                         <viewControllerLayoutGuide type="bottom" id="rkW-sJ-ifK"/>
