--- a/picothru/ListTableViewCell.xib
+++ b/picothru/ListTableViewCell.xib
@@ -45,7 +45,9 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="prodactcount" destination="90H-tP-HOJ" id="Ili-sL-aoZ"/>
                 <outlet property="prodactname" destination="gk4-Vk-YkL" id="WVC-q5-3Vc"/>
