--- a/picothru/Base.lproj/Main_iPhone.storyboard
+++ b/picothru/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="186-eO-aZA">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -67,6 +66,35 @@
             </objects>
             <point key="canvasLocation" x="744" y="67"/>
         </scene>
+        <!--News View Controller-->
+        <scene sceneID="DWq-Zj-8yM">
+            <objects>
+                <viewController storyboardIdentifier="nw" id="6gq-To-jXn" customClass="NewsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Z2X-Tw-gpE"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z76-dw-B3N"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9wY-Nj-SJS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="news-content.png" translatesAutoresizingMaskIntoConstraints="NO" id="RSE-gd-b6n">
+                                <rect key="frame" x="0.0" y="65" width="320" height="453"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Developing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruS-nG-b5O">
+                                <rect key="frame" x="44" y="204" width="232" height="139"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rUe-rT-7Hf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1157" y="67"/>
+        </scene>
         <!--Purchase View Controller-->
         <scene sceneID="0Og-SB-g32">
             <objects>
@@ -94,6 +122,9 @@
             <point key="canvasLocation" x="285" y="67"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="news-content.png" width="2667" height="3842"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
